Migration website completed

--- a/src/drumee/builtins/media/grid/skin/expiry-status.scss
+++ b/src/drumee/builtins/media/grid/skin/expiry-status.scss
@@ -3,7 +3,7 @@
 &-expiry-status {
   &__icon {
     &.expiry-status {
-      color: $share-default-icon-reverse;
+      color: var(--default-icon-reverse);
       // cursor: help;
       height: 18px;
       width: 18px;
@@ -12,7 +12,7 @@
       top: 20px;
 
       & svg {
-        border: 0.8px solid $share-default-icon-reverse;
+        border: 0.8px solid var(--default-icon-reverse);
         border-radius: 50%;
       }
 
@@ -23,8 +23,8 @@
       // }
 
       // & .tooltips {
-      //   @include typo($size: 12px, $line: 20px, $color: $share-default-text-tooltips);
-      //   background-color: $share-default-background-tooltips;
+      //   @include typo($size: 12px, $line: 20px, $color: var(--default-text-tooltips));
+      //   background-color: var(--background-tooltips);
       //   border-radius: $default-border-radius;
       //   max-height: 90px;
       //   min-height: 40px;
