--- a/src/drumee/builtins/window/hub/sharebox/skin/index.scss
+++ b/src/drumee/builtins/window/hub/sharebox/skin/index.scss
@@ -13,19 +13,19 @@
     width: 570px;
   }
   &__topbar {
-    background-color: $sharebox-main;
+    background-color: var(--sharebox-main);
     color: var(--default-text-reverse); 
     border-radius: $default-border-radius-top; //4px 4px 0 0;
     height: 44px;
     .dialog__button--close {
-      color: $share-default-icon-reverse;
+      color: var(--default-icon-reverse);
       margin: 2px 0px auto 0;
       :hover {
-        color: $share-default-icon-hover;
+        color: var(--default-icon-hover);
       }
     }
     &.title {
-      @include typo($line: 29px, $size: 18px, $weight: 400, $color: $share-default-text-reverse); //var(--ewhite));
+      @include typo($line: 29px, $size: 18px, $weight: 400, $color: var(--default-text-reverse)); //var(--ewhite));
     }
     &.icon {
       width: 18px;
@@ -42,16 +42,16 @@
       height: auto;
       padding: 12px 18px;
       position: absolute;
-      background-color: $share-default-background-tooltips; //$sharebox-background-tooltips//#FFFFFF;
+      background-color: var(--background-tooltips); //$sharebox-background-tooltips//#FFFFFF;
       z-index: 100;
-      @include typo($line: 16px, $size: 14px, $weight: 400, $color: $share-default-text-tooltips); //var(--egrey-2f)
+      @include typo($line: 16px, $size: 14px, $weight: 400, $color: var(--default-text-tooltips)); //var(--egrey-2f)
       &:after {
         content: "";
         position: absolute;
         width: 10px;
         height: 10px;
         transform: rotate(45deg);
-        background: $share-default-background; // white;
+        background: var(--default-background); // white;
         top: -3px;
         left: calc(50% - 5px);
       }
@@ -60,7 +60,7 @@
   &__main {
     width: 100%;
     z-index: 60000; // higher than data-state=open
-    background-color: $share-default-background;//$default-background; // var(--ewhite);
+    background-color: var(--default-background);//$default-background; // var(--ewhite);
     justify-content: center;
     align-items: center;
   }
@@ -75,7 +75,7 @@
   &__note {
     &.access-list-title {
       padding: 15px 0 0;
-      @include typo($size:16px, $line:22px, $weight:400, $color: $sharebox-text-color);
+      @include typo($size:16px, $line:22px, $weight:400, $color: var(--sharebox-main));
     }
   }
 
@@ -85,7 +85,7 @@
     border: 1px solid transparent;
     .input-details {
       position: absolute;
-      @include typo($line: 29px, $size: 13px, $color:$share-default-text-error);//$weight: 300,
+      @include typo($line: 29px, $size: 13px, $color: var(--default-text-error));//$weight: 300,
       right: 0px;
       padding: 3px;
     }
@@ -94,20 +94,20 @@
       margin: 0;
       min-height: 29px;
       border: 0px;
-      border-bottom: 1px $share-default-entry-border-bottom solid; 
+      border-bottom: 1px var(--default-entry-border-bottom); 
       padding-left: 3px;
       // border-style: none;
       outline: none;
       overflow: hidden;
       resize: none;
-      @include typo($line: 29px, $size: 16px, $weight: 400, $color: $share-default-text-color);
+      @include typo($line: 29px, $size: 16px, $weight: 400, $color: var(--default-text-color));
       @include placeholder-input {
-        @include typo($line: 29px, $size: 16px, $weight: 300, $color: $share-default-text-placeholder); 
+        @include typo($line: 29px, $size: 16px, $weight: 300, $color: var(--default-text-placeholder)); 
       }
       &:focus {
-        border-bottom: 1px solid $share-focus-border-placeholder; 
+        border-bottom: 1px solid var(--focus-border-placeholder); 
         @include placeholder-input {
-          @include typo($line: 29px, $size: 16px, $weight: 300, $color: $share-default-text-placeholder);
+          @include typo($line: 29px, $size: 16px, $weight: 300, $color: var(--default-text-placeholder));
         }
       }
     }
@@ -115,15 +115,15 @@
     input {
       width: calc(100% - 5px); //100%;
       margin: 0;
-      border-bottom: 1px solid $share-default-entry-border-bottom; 
-      @include typo($line: 29px, $size: 16px, $weight: 400, $color: $share-default-text-color);
+      border-bottom: 1px solid var(--default-entry-border-bottom); 
+      @include typo($line: 29px, $size: 16px, $weight: 400, $color: var(--default-text-color));
       @include placeholder-input {
-        @include typo($line: 29px, $size: 16px, $weight: 300, $color: $share-default-text-placeholder); //#89929e
+        @include typo($line: 29px, $size: 16px, $weight: 300, $color: var(--default-text-placeholder)); //#89929e
       }
       &:focus {
-        border-bottom: 1px solid $share-focus-border-placeholder;
+        border-bottom: 1px solid var(--focus-border-placeholder);
         @include placeholder-input {
-          @include typo($line: 29px, $size: 16px, $weight: 300, $color: $share-text-placeholder-focus);
+          @include typo($line: 29px, $size: 16px, $weight: 300, $color: var(--focus-text-placeholder));
         }
       }
     }
@@ -139,23 +139,23 @@
     }
   }
   .entry-reminder__icon {
-    color: $share-default-icon-neutral;
+    color: var(--default-icon-neutral);
     &:hover {
-      color: $share-default-icon-hover;
+      color: var(--default-icon-hover);
     }
   }
   .entry-search__ui {
     margin: 0;
     input {
-      border-bottom: 1px solid $share-default-entry-border-bottom;
-      @include typo($line: 29px, $size: 16px, $weight: 400, $color:$share-default-text-color);//$size: 18px
+      border-bottom: 1px solid var(--default-entry-border-bottom);
+      @include typo($line: 29px, $size: 16px, $weight: 400, $color: var(--default-text-color));//$size: 18px
       @include placeholder-input {
-        @include typo($line: 29px, $size: 16px, $weight: 300, $color: $share-default-text-placeholder); //#89929E $size: 18px,
+        @include typo($line: 29px, $size: 16px, $weight: 300, $color: var(--default-text-placeholder)); //#89929E $size: 18px,
       }
       &:focus {
-        border-bottom: 1px solid $share-focus-border-placeholder;
+        border-bottom: 1px solid var(--focus-border-placeholder);
         @include placeholder-input {
-          @include typo($line: 29px, $size: 16px, $weight: 300, $color: $share-text-placeholder-focus); //#4A90E2 $size: 18px,
+          @include typo($line: 29px, $size: 16px, $weight: 300, $color: var(--focus-text-placeholder)); //#4A90E2 $size: 18px,
         }
       }
     }
@@ -172,9 +172,9 @@
       &__entry {
         input {
           //       border-bottom: 1px solid var(--entry-border-bottom); //#ECEDEE;
-          @include typo($line: 29px, $size: 16px, $weight: 400, $color: $share-default-text-color);
+          @include typo($line: 29px, $size: 16px, $weight: 400, $color: var(--default-text-color));
           @include placeholder-input {
-            @include typo($line: 29px, $size: 16px, $weight: 300, $color: $share-default-text-placeholder); //#89929E
+            @include typo($line: 29px, $size: 16px, $weight: 300, $color: var(--default-text-placeholder)); //#89929E
           }
         }
       }
@@ -186,14 +186,14 @@
         }
       }
       &__icon {
-        color: $share-default-icon-neutral;
+        color: var(--default-icon-neutral);
         min-width: 20px;
         min-height: 20px;
         width: 20px;
         height: 20px;
         opacity: 0.85;
         &:hover {
-          color: $share-default-icon-hover;
+          color: var(--default-icon-hover);
           opacity: 1;
         }
       }
@@ -210,7 +210,7 @@
     }
   }
   &__container {
-    background-color:$share-default-background;
+    background-color:var(--default-background);
     .invitation-settings__wrapper-options {
       position: absolute;
     }
@@ -222,7 +222,7 @@
 
     &.--footer {
       padding: 0px;
-      background-color: $share-default-background;
+      background-color: var(--default-background);
       z-index: 10000;
       border-radius: $default-border-radius-bottom;
 
@@ -259,7 +259,7 @@
     top: calc(100% - 15px);
   }
   &__title {
-    @include typo($line: 28px, $size: 24px, $weight: 400, $color: $share-default-text-color);
+    @include typo($line: 28px, $size: 24px, $weight: 400, $color: var(--default-text-color));
   }
   &__invitation {
     width: 320px;
@@ -276,7 +276,7 @@
   }
 
   &__options-list-wrapper {
-    color: $share-default-icon-neutral;
+    color: var(--default-icon-neutral);
     height: 25px;
     justify-content: space-between;
     margin: 0px auto;
@@ -285,7 +285,7 @@
     width: 190px;
 
     :hover {
-      color: $share-default-icon-hover;
+      color: var(--default-icon-hover);
       opacity: 1;
     }
   }
@@ -298,7 +298,7 @@
     border-radius: $default-border-radius-small;// 4px;
     &[data-state="1"] {
       //  background: #879bff;
-      color: $share-default-icon-hover;
+      color: var(--default-icon-hover);
       opacity: 1;
     }
   }
@@ -311,16 +311,16 @@
 
   &-permission__icon.checkbox {
     border-radius: $default-checkbox-border-radius;
-    border: 1px solid $share-default-checkbox-border;
-    color: $share-default-checkbox-background;
+    border: 1px solid var(--default-checkbox-border);
+    color: var(--default-checkbox-background);
     cursor: pointer;
     height: 18px;
     padding: 2px;
     width: 18px;
 
     &[data-state="1"] {
-      border: 1px solid $share-default-checkbox-border;
-      color: $share-default-checkbox-checked ;
+      border: 1px solid var(--default-checkbox-border);
+      color: var(--default-checkbox-checked);
     }
 
     &.see-icon[data-state="1"] {
@@ -337,7 +337,7 @@
   &__hours_entry {
     width: 25px; //28px;
     height: 25px;
-    background-color: $share-default-background;
+    background-color: var(--default-background);
     border-radius: $default-border-radius;
     & input::-webkit-outer-spin-button,
     & input::-webkit-inner-spin-button {
@@ -351,9 +351,9 @@
       border-bottom: none;
       text-align: center;
       padding-right: 0px;
-      @include typo($line: 29px, $size: 14px, $weight: 400, $color: $share-default-text-color);
+      @include typo($line: 29px, $size: 14px, $weight: 400, $color: var(--default-text-color));
       @include placeholder-input {
-        @include typo($line: 29px, $size: 14px, $weight: 300, $color: $share-default-text-placeholder); //#89929e
+        @include typo($line: 29px, $size: 14px, $weight: 300, $color: var(--default-text-placeholder)); //#89929e
       }
     }
   }
@@ -366,7 +366,7 @@
 
   &__settings-wrapper {
     align-items: center;
-    background: $share-default-block-background ;
+    background: var(--default-block-background);
     margin: 20px 0px 10px 0px;
     border-radius: $default-border-radius;
 
@@ -385,7 +385,7 @@
 
   &-permission__note {
     margin-left: 15px;
-    @include typo($size: 14px, $weight:300, $color: $share-default-text-color);// old:#787b7f);
+    @include typo($size: 14px, $weight:300, $color: var(--default-text-color));// old:#787b7f);
   }
 
   &__share-box-name-holder,
@@ -397,11 +397,11 @@
   }
   &__validity-caption {
     padding-right: 20px; //15px;
-    @include typo($size: 14px, $weight:300,$color: $share-default-text-color); //old:#787b7f);
+    @include typo($size: 14px, $weight:300,$color: var(--default-text-color)); //old:#787b7f);
   }
   &__days-caption,
   &__hours-caption {
-    @include typo($size: 14px, $color: $share-secondary-text-color); //old: var(--eviolet) //#879bff);
+    @include typo($size: 14px, $color: var(--secondary-text-color)); //old: var(--eviolet) //#879bff);
     //padding-right: 10px;
   }
   &__validity-wrapper {
@@ -413,7 +413,7 @@
     align-items: center;
     justify-content: center;
     padding: 0px 2px 13px 2px;
-    @include typo($size: 16px, $color: $share-secondary-text-color); //old: var(--eviolet) //#879bff);
+    @include typo($size: 16px, $color: var(--secondary-text-color)); //old: var(--eviolet) //#879bff);
   }
 
   &__password-info-icon {
@@ -422,9 +422,9 @@
     margin-left: 32px;
     margin-top: 13px;
     padding: 1px;
-    color: $share-default-icon-neutral;
+    color: var(--default-icon-neutral);
     &:hover {
-      color: $share-default-icon-hover;
+      color: var(--default-icon-hover);
     }
   }
   &__tooltips {
@@ -434,9 +434,9 @@
     width: 210px; //165px;
     text-align: justify;
     border-radius: $default-border-radius;
-    background-color: $share-default-background-tooltips;
+    background-color: var(--background-tooltips);
     margin-left: -89px; //-45px; //-215px;
     margin-top: 22px; //16px;
-    @include typo($size: 11px, $line: 14px, $color: $share-default-text-tooltips); //, $line: 15px,
+    @include typo($size: 11px, $line: 14px, $color: var(--default-text-tooltips)); //, $line: 15px,
   }
 }
