--- a/src/drumee/builtins/window/schedule/skin/topbar.scss
+++ b/src/drumee/builtins/window/schedule/skin/topbar.scss
@@ -14,7 +14,7 @@
   height: 44px;
   min-height: 44px;
   border-bottom: none;
-  background-color: $sharebox-main;
+  background-color: var(--sharebox-main);
   .menu-items{
     background: var(--default-bg);  
     border-radius:$default-border-radius;
