--- a/src/drumee/builtins/window/share/skin/header.scss
+++ b/src/drumee/builtins/window/share/skin/header.scss
@@ -5,7 +5,7 @@
 
   &__container {
     &.share {
-      background-color: $share-box-topbar-container;
+      background-color: var(--share-box-topbar-container);
       width: 100%;
     }
   }
@@ -62,7 +62,7 @@
 
     &__container  {
       &.share {
-        background-color: $share-box-topbar-container;
+        background-color: var(--share-box-topbar-container);
       }
     }
   }
