--- a/src/drumee/builtins/window/transferbox/skin/topbar.scss
+++ b/src/drumee/builtins/window/transferbox/skin/topbar.scss
@@ -1,6 +1,6 @@
 &-topbar {
   &__container {
-    background-color: $share-box-topbar-container;
+    background-color: var(--share-box-topbar-container);
     width: 100%;
   }
 
