--- a/src/drumee/modules/desk/wm/notification/widget/notification-list-item/skin/index.scss
+++ b/src/drumee/modules/desk/wm/notification/widget/notification-list-item/skin/index.scss
@@ -125,7 +125,7 @@
       }
 
       &.share {// #orange
-        color: $share-background-header;
+        color: var(--sharebox-main);
       }
 
       &.green {
