--- a/src/drumee/modules/dmz/meeting/skin/lobby.scss
+++ b/src/drumee/modules/dmz/meeting/skin/lobby.scss
@@ -125,7 +125,7 @@
       width: 30px;
       height: 30px;
       padding: 4px;
-      color: $sharebox-main;
+      color: var(--sharebox-main);
       cursor: pointer;
       border-radius: 3px;
 
