--- a/src/drumee/skin/mixins/colors/index.scss
+++ b/src/drumee/skin/mixins/colors/index.scss
@@ -11,10 +11,10 @@
 @import 'folder';
 @import 'connect';
 @import 'multimedia';
-@import 'website';
-@import 'sharebox';
-@import 'sharebox';
-@import 'team';
+// @import 'website';
+// @import 'sharebox';
+// @import 'sharebox';
+// @import 'team';
 // @import 'dmz';
 // @import 'helpdesk';
 // @import 'drumee-transfer';
