--- a/src/drumee/builtins/window/sharebox/widget/email-notification/skin/index.scss
+++ b/src/drumee/builtins/window/sharebox/widget/email-notification/skin/index.scss
@@ -9,7 +9,7 @@
 .widget-sharebox-email-notification {
   &__ui {
     align-items: center;
-    background-color: $share-default-background;
+    background-color: var(--default-background);
     border-radius: $default-border-radius;
     box-shadow: var(--shadow-container);
     height: calc(100% - 10px);
@@ -31,11 +31,11 @@
     position: absolute;
     top: 0;
     right: 0;
-    color: $share-default-thinline-icon;
+    color: var(--default-thinline-icon);
     cursor: pointer;
     z-index: 2;
     &:hover{
-      color:$share-default-thinline-icon-hover;
+      color:var(--default-thinline-icon-hover);
     }
   }
   
@@ -60,7 +60,7 @@
       max-height: 60px;
       text-align: left;//center;
       margin-bottom: 20px;
-      @include typo($size: 16px, $line: 24px, $color: $share-default-text-color);
+      @include typo($size: 16px, $line: 24px, $color: var(--default-text-color));
       width: auto;
       min-width: 255px;
       margin: 40px 0 0 45px;//80px 0 0 45px;
@@ -69,7 +69,7 @@
     &__ico{
       width: 30px;
       height:20px;// 30px;
-      color: $share-default-icon-success;
+      color: var(--default-icon-success);
       left: 158px;
       margin-bottom: 60px;
     }
@@ -109,18 +109,18 @@
 
     &__note {
       &.title {
-        @include typo($size: 16px, $color: $sharebox-text-color);
+        @include typo($size: 16px, $color: var(--sharebox-main));
         margin: 10px 0px 16px 0px;
       }
 
       &.info {
-        @include typo($size: 14px, $line: 24px, $color: $share-default-text-color);
+        @include typo($size: 14px, $line: 24px, $color: var(--default-text-color));
         width: auto;//300px;//255px;
         min-width: 255px;
       }
 
       &.expired-status {
-        @include typo($size: 14px, $line: 20px, $color: $share-default-text-error);
+        @include typo($size: 14px, $line: 20px, $color: var(--default-text-error));
         min-width: 255px;
         text-align: center;
         width: auto;
@@ -128,14 +128,14 @@
     }
 
     &__entry {
-      @include typo($size: 14px, $line: 21px, $color: $share-default-text-color);//$size: 16px,
+      @include typo($size: 14px, $line: 21px, $color: var(--default-text-color));//$size: 16px,
       width: 100%;
 
       &[data-status='error'] {
-        border: 1px solid $share-default-border-alert;//var(--default-border-error);
+        border: 1px solid var(--default-border-alert);//var(--default-border-error);
         border-radius: $default-border-radius;
         & input:focus {
-          border-color: $share-default-border-alert ;
+          border-color: var(--default-border-alert);
         }
       }
       
@@ -143,8 +143,8 @@
         width: 95%;//100%;
   
         & textarea {
-          @include typo($size: 14px, $line: 21px, $color: $share-default-text-color);//$size: 16px,
-          background: $share-default-block-background;
+          @include typo($size: 14px, $line: 21px, $color: var(--default-text-color));//$size: 16px,
+          background: var(--default-block-background);
           border-radius: $default-border-radius;
           border: none;
           outline: none;
@@ -153,7 +153,7 @@
           width: 100%;
   
           &::placeholder {
-            @include typo($size: 14px, $line: 14px, $weight: 300, $color: $share-default-text-placeholder);
+            @include typo($size: 14px, $line: 14px, $weight: 300, $color: var(--default-text-placeholder));
           }
         }
       }
