--- a/src/drumee/builtins/window/sharebox/widget/invitation-email/skin/index.scss
+++ b/src/drumee/builtins/window/sharebox/widget/invitation-email/skin/index.scss
@@ -41,19 +41,19 @@
   }
 
   & .add-email-plus {
-    border: 1px solid $share-default-text-success;
+    border: 1px solid var(--default-text-success);
     padding: 3px;
-    color: $share-default-text-success;
+    color: var(--default-text-success);
     border-radius:$default-border-radius-small;// 3px;
     cursor: pointer;
     &:hover{
       background: var(--egreen);
-      color:  $share-default-text-reverse ;
+      color:  var(--default-text-reverse);
     }
   }
 
   & .invitation-email__entry[data-status='error'] textarea {
-    border-color: $share-default-border-error;//var(--eorange-sunset);
+    border-color: var(--default-border-error);//var(--eorange-sunset);
   }
   & .showerror{
     overflow: visible;
@@ -61,13 +61,13 @@
   & .entry-reminder_error {
     padding-left: 20px;
     padding-top: 6px;//4px;
-    @include typo($size: 12px, $weight: 400, $color:$share-default-text-error);
+    @include typo($size: 12px, $weight: 400, $color: var(--default-text-error));
   }
 
   &__entry{
     input, textarea {
-      border: 0px solid $share-default-entry-border-bottom; 
-      border-bottom: 1px solid $share-default-entry-border-bottom;
+      border: 0px solid var(--default-entry-border-bottom); 
+      border-bottom: 1px solid var(--default-entry-border-bottom);
       margin: 0;
       margin-left: 20px;
       min-height: 24px;
@@ -76,9 +76,9 @@
       resize: none;
       white-space: nowrap;
       width: calc(100% - 5px); //100%;
-      @include typo($line: 29px, $size: 14px, $weight: 400, $color: $share-default-text-color);// $size: 16px,
+      @include typo($line: 29px, $size: 14px, $weight: 400, $color: var(--default-text-color));// $size: 16px,
       @include placeholder-input {
-        @include typo($line: 29px, $size: 14px, $weight: 300, $color: $share-default-text-placeholder); //#89929e$size: 16px,
+        @include typo($line: 29px, $size: 14px, $weight: 300, $color: var(--default-text-placeholder)); //#89929e$size: 16px,
       }
     }
   }
@@ -99,7 +99,7 @@
     width: 25px;//17px;
     height: 21px;
     margin-left: 10px;
-    color:$share-default-icon-neutral;
+    color:var(--default-icon-neutral);
     opacity:0.85;//0.65;
   }
   .entry-reminder__ui{
@@ -112,10 +112,10 @@
   }
 
   &__icon.added-contact {
-    color: $share-default-icon-neutral;
+    color: var(--default-icon-neutral);
   }
   &__suggestion_wrapper {
-    background: $share-default-background;
+    background: var(--default-background);
     position: absolute;
     width: 100%;
     top: 100%;
@@ -177,7 +177,7 @@
   }
 
   &__icon {
-    color: $share-default-icon-neutral;
+    color: var(--default-icon-neutral);
     cursor: pointer;
     height: 20px;
     left: 5px;
@@ -186,21 +186,21 @@
     opacity: .85;
     width: 20px;
     &.default-avatar{
-      color: $share-default-user-icon;
+      color: var(--default-user-icon);
       opacity: 1;
       height: 26px;
       min-height: 26px;
       min-width: 26px;
       width: 26px;
       :hover{
-        color:$share-default-user-icon;
+        color:var(--default-user-icon);
       }
     }
   }
 
   &__note {
     &.name {
-      @include typo($size: 14px,  $line: 16px, $color: $share-default-text-color);
+      @include typo($size: 14px,  $line: 16px, $color: var(--default-text-color));
       left: 15px;
       top: 2px;
     }
