--- a/src/drumee/builtins/window/sharebox/widget/sharebox-setting/skin/index.scss
+++ b/src/drumee/builtins/window/sharebox/widget/sharebox-setting/skin/index.scss
@@ -12,7 +12,7 @@
     width: 410px;
     position: absolute;
     height: auto !important;
-    background-color: $share-default-background;
+    background-color: var(--default-background);
     border-radius: $default-border-radius-bottom;
     align-items: center;
     min-height: 345px;
@@ -30,11 +30,11 @@
     position: absolute;
     top: 0;
     right: 0;
-    color: $share-default-thinline-icon;// #b6bfca;
+    color: var(--default-thinline-icon);// #b6bfca;
     cursor: pointer;
     z-index: 2;
     &:hover{
-      color:$share-default-thinline-icon-hover;
+      color:var(--default-thinline-icon-hover);
     }
   }
   &__body-main {
@@ -42,23 +42,23 @@
   }
   &__copy-text-wrapper  {
     align-items: center;
-    @include typo($size: 12px, $color:$share-default-text-color);//$default-text-success
+    @include typo($size: 12px, $color: var(--default-text-color));//$default-text-success
     .icon {
       height: 14px;//16px
       width: 38px;//22px;
       margin:0 0px 0 20x;//0 4px 0 12px;;//
-      color: $share-default-icon-success;
+      color: var(--default-icon-success);
     }
   }
   &__copy-success {
-    @include typo($size: 12px, $color: $share-default-text-color);
+    @include typo($size: 12px, $color: var(--default-text-color));
   }
   &__action-button {
     align-items: center;
     justify-content: center;
   }
   &__icon.destroy {
-    color: $share-default-icon-neutral;
+    color: var(--default-icon-neutral);
     position: absolute;
     width: 19px;
     height: 19px;
@@ -72,7 +72,7 @@
     &:hover {
       svg {
         opacity: 1;
-        color: $share-default-icon-hover;
+        color: var(--default-icon-hover);
       }
     }
   }
@@ -92,15 +92,15 @@
 
   &__page-title-note {
     margin: 10px 0px 16px 0px;
-    @include typo($size: 16px, $color: $sharebox-text-color);
+    @include typo($size: 16px, $color: var(--sharebox-main));
   }
   &__password-view-row{
     &:hover{
-      background-color: $share-default-background-hover;
-      color:$share-default-text-hover; 
+      background-color: var(--default-background-hover);
+      color:var(--default-text-hover); 
       *{
-        background-color: $share-default-background-hover;
-        color:$share-default-text-hover; 
+        background-color: var(--default-background-hover);
+        color:var(--default-text-hover); 
       }
     }
   }
@@ -108,18 +108,18 @@
     padding-left: 3px;
     margin-left: -2px;
     &:hover{
-      background-color: $share-default-background-hover;
-      color:$share-default-text-hover; 
+      background-color: var(--default-background-hover);
+      color:var(--default-text-hover); 
       *{
-        background-color: $share-default-background-hover;
-        color:$share-default-text-hover; 
+        background-color: var(--default-background-hover);
+        color:var(--default-text-hover); 
       }
 
       &[data-state="1"],
       &.selected {
-        color: $share-default-checkbox-checked;//$checkbox-active;
-        border: 1px solid $share-checkbox-checked-border-reverse;//white;
-        color:$share-checkbox-checked-reverse; 
+        color: var(--default-checkbox-checked);//$checkbox-active;
+        border: 1px solid var(--checkbox-checked-border-reverse);//white;
+        color:var(--checkbox-checked-reverse); 
       }
       .widget-sharebox-setting__inline-action-btn{
         background-color: var(--btn-commit-background-hover);
@@ -130,15 +130,15 @@
       .widget-sharebox-setting{
         &-permission__icon{
           .checkbox[data-state="1"]{
-            color: $share-checkbox-checked-reverse; //var(--ewhite);
-            border: 1px solid $share-checkbox-checked-border-reverse;
+            color: var(--checkbox-checked-reverse); //var(--ewhite);
+            border: 1px solid var(--checkbox-checked-border-reverse);
             border-radius:$default-checkbox-border-radius;
           }
         }
       }
       .checkbox{
         &[data-state="1"]{
-          border:1px solid $share-checkbox-checked-border-reverse;
+          border:1px solid var(--checkbox-checked-border-reverse);
         } 
       }
     }
@@ -150,7 +150,7 @@
 
   &__settings_wrapper {
     justify-content: center;
-    background: $share-default-block-background;  
+    background: var(--default-block-background);  
     border-radius:$default-border-radius;// 2px;
     padding: 9px 0;//0px 10px 10px 10px;
     margin: 10px 8px 0 10px;//10px;
@@ -164,7 +164,7 @@
   &__legend {
     width: 100px; //80px;
     padding-top: 2px;
-    @include typo($color:$sharebox-text-color-legend,$size:14px,$line:26px,$weight:400);
+    @include typo($color: var(--sharebox-main)-legend,$size:14px,$line:26px,$weight:400);
   //  margin-left:20px;
     flex-shrink: 0;
     //left: 15px;
@@ -177,14 +177,14 @@
   }
   &__button {
     margin-left: -1px;
-    border: 1px solid $share-default-entry-border-bottom;
+    border: 1px solid var(--default-entry-border-bottom);
     border-radius: $default-border-radius;
     padding: 3px 10px;//1px 6px;
     cursor: pointer;
-    @include typo($size: 14px, $color: $share-default-text-color, $weight:300,);//$size: 13px
+    @include typo($size: 14px, $color: var(--default-text-color), $weight:300,);//$size: 13px
     &:hover {
-      background:$share-default-background-hover;//var(--eviolet);
-      color:$share-default-text-hover;// var(--ewhite);
+      background:var(--default-background-hover);//var(--eviolet);
+      color:var(--default-text-hover);// var(--ewhite);
     }
   }
 
@@ -197,15 +197,15 @@
   &-permission__icon.checkbox {
     width: 15px;
     height: 15px;
-    border: 1px solid $share-default-checkbox-border;
+    border: 1px solid var(--default-checkbox-border);
     border-radius: $default-checkbox-border-radius;
     cursor: pointer;
-    color:$share-default-checkbox-background;
+    color:var(--default-checkbox-background);
 
     &[data-state="1"],
     &.selected {
-      color:$share-default-checkbox-checked;
-      border: 1px solid $share-default-checkbox-border;
+      color:var(--default-checkbox-checked);
+      border: 1px solid var(--default-checkbox-border);
     }
 
     &[data-state="0"],
@@ -216,9 +216,9 @@
   &-permission__note {
     margin-right: 20px;//15px;
     margin-left: 3px;//5px;
-    @include typo($color:$share-default-text-color,$size:14px,$weight:300);//($size: 13px, $color: var(--egrey-78));
+    @include typo($color: var(--default-text-color),$size:14px,$weight:300);//($size: 13px, $color: var(--egrey-78));
     &:hover{
-      color:$share-default-text-hover; 
+      color:var(--default-text-hover); 
     }
   }
 
@@ -228,15 +228,15 @@
   &__hours_entry {
     width: 23px;//28px;
     height: 23px;
-    background-color: $share-default-background;
+    background-color: var(--default-background);
     border-radius:$default-border-radius;
     & input::-webkit-outer-spin-button,
     & input::-webkit-inner-spin-button {
       -webkit-appearance: none;
       margin: 0;
       &:hover{
-        background-color: $share-default-background-hover;
-        color: $share-default-text-hover;//#fff;
+        background-color: var(--default-background-hover);
+        color: var(--default-text-hover);//#fff;
         border: $ewhite 1px solid;
       }
     }
@@ -247,9 +247,9 @@
       border-bottom: none;
       text-align: center;
       padding-right:2px;// 0px;
-      @include typo($line: 29px, $size: 14px, $weight: 400, $color: $share-default-text-color);
+      @include typo($line: 29px, $size: 14px, $weight: 400, $color: var(--default-text-color));
       @include placeholder-input {
-        @include typo($line: 29px, $size: 14px, $weight: 300, $color: $share-default-text-placeholder); //#89929e
+        @include typo($line: 29px, $size: 14px, $weight: 300, $color: var(--default-text-placeholder)); //#89929e
       }
     }
   }
@@ -259,7 +259,7 @@
   }*/
   &__validity-caption {
     padding-right: 15px;
-    @include typo($size: 14px, $weight: 300, $color: $share-default-text-color);// var(--egrey-78));  $weight: 400,
+    @include typo($size: 14px, $weight: 300, $color: var(--default-text-color));// var(--egrey-78));  $weight: 400,
   }
 
   /* Notification Block */
@@ -271,7 +271,7 @@
   &__notification-title {
     justify-content: center;
     margin-bottom: 10px;
-    @include typo($size: 16px, $color: $sharebox-text-color);
+    @include typo($size: 16px, $color: var(--sharebox-main));
   }
   &__action-button {
     background: var(--btn-rollback-background);
@@ -327,7 +327,7 @@
     height: 18px;
     width: 18px;
     margin: 3px 5px 3px 12px;
-    color: $share-default-block-background; //must follow the background color
+    color: var(--default-block-background); //must follow the background color
     padding-right: 5px;
     opacity: 0.85;
     svg{
@@ -335,8 +335,8 @@
     }
     &:hover{
       opacity: 1;
-      background-color: $share-default-background-hover;
-      color:$share-default-icon-reverse;
+      background-color: var(--default-background-hover);
+      color:var(--default-icon-reverse);
     //  color:$default-thinline-icon-hover;
     }
     &.btn-first{
@@ -354,9 +354,9 @@
     padding: 0;
     margin: auto auto auto 14px;
     left: 15px;
-    color: $share-default-icon-neutral;
+    color: var(--default-icon-neutral);
     :hover{
-      color:$share-default-thinline-icon-hover;
+      color:var(--default-thinline-icon-hover);
     }
     .widget-sharebox-setting__tooltips {
       top: calc(100% + 5px);
@@ -368,9 +368,9 @@
       padding: 6px;//12px 18px;
       text-align:justify;
       position: absolute;
-      background-color: $share-default-background-tooltips;
+      background-color: var(--background-tooltips);
       z-index: 100;
-      @include typo($line:14px,$size:11px,$weight:400,$color:$share-default-text-tooltips);
+      @include typo($line:14px,$size:11px,$weight:400,$color: var(--default-text-tooltips));
     //  @include typo($line: 16px, $size: 14px, $weight: 400, $color: var(--default-text-color)); //var(--egrey-2f)
  /*     &:after {
         content: "";
@@ -386,11 +386,11 @@
   }
   &__password-view-txt{
     padding-right: 10px;
-    @include typo($line:26px,$size:14px,$weight:300,$color:$share-default-text-color);//$line:23px $size:13px,$weight:400,
+    @include typo($line:26px,$size:14px,$weight:300,$color: var(--default-text-color));//$line:23px $size:13px,$weight:400,
     min-width: 145px;
     padding-left: 5px;
     &:hover{
-      color:$share-default-text-hover; 
+      color:var(--default-text-hover); 
     }
   }
   &__password-wrapper {
@@ -398,18 +398,18 @@
     & .entry-reminder {
       width: 160px;
       input{
-        @include typo($line:26px,$size:14px,$weight:400,$color:$share-default-text-color);//$size:13px
+        @include typo($line:26px,$size:14px,$weight:400,$color: var(--default-text-color));//$size:13px
         @include placeholder-input {
-          @include typo($line: 26px, $size: 14px, $weight: 300, $color: $share-default-text-placeholder); //#89929e $size:13px
+          @include typo($line: 26px, $size: 14px, $weight: 300, $color: var(--default-text-placeholder)); //#89929e $size:13px
         }
       }   
     }
     & .pw-shower {
       top: 0px;
-      color: $share-default-icon-neutral;
+      color: var(--default-icon-neutral);
       right: -30px;
       :hover{
-        color:$share-default-thinline-icon-hover;
+        color:var(--default-thinline-icon-hover);
       }
     }
   }
