--- a/src/drumee/builtins/window/sharebox/widget/sharebox-setting/skin/validity.scss
+++ b/src/drumee/builtins/window/sharebox/widget/sharebox-setting/skin/validity.scss
@@ -103,16 +103,16 @@
     }
 
     &:hover {
-      background-color: $share-default-background-hover;
-      color:$share-default-text-hover ;
+      background-color: var(--default-background-hover);
+      color:var(--default-text-hover);
       
       & input[type="number"] {
-        background-color: $share-default-background;
+        background-color: var(--default-background);
       }
       
       *{
-        background-color: $share-default-background-hover;
-        color:$share-default-text-hover ;
+        background-color: var(--default-background-hover);
+        color:var(--default-text-hover);
 
         svg {
           border-radius: var(--border-radius-tiny);
@@ -136,20 +136,20 @@
       }
 
       .validity-entry-text {
-        background-color: $share-default-background-hover;
+        background-color: var(--default-background-hover);
         border:1px solid var(--ewhite); 
       }
     }
   }
 
   &__validity-caption {
-    @include typo($size: 14px, $weight: 300, $color: $share-default-text-color);// var(--egrey-78));  $weight: 400,
+    @include typo($size: 14px, $weight: 300, $color: var(--default-text-color));// var(--egrey-78));  $weight: 400,
     padding-right: 10px;
   }
 
   &__days-caption,
   &__hours-caption {
-    @include typo($size: 14px,$weight: 300, $color:$share-secondary-text-color);//var(--eviolet));
+    @include typo($size: 14px,$weight: 300, $color: var(--secondary-text-color));//var(--eviolet));
     bottom: 0;
     padding-right: 10px;
   }
@@ -172,7 +172,7 @@
     &.validity-entry {
       width: 23px;
       height: 23px;
-      background-color: $share-default-background;
+      background-color: var(--default-background);
       border-radius:$default-border-radius;
 
       &.days {
@@ -185,8 +185,8 @@
         margin: 0;
 
         &:hover {
-          background-color: $share-default-background-hover;
-          color: $share-default-text-hover;
+          background-color: var(--default-background-hover);
+          color: var(--default-text-hover);
           border: $ewhite 1px solid;
         }
       }
@@ -197,9 +197,9 @@
         border-bottom: none;
         text-align: center;
         padding-right:2px;// 0px;
-        @include typo($line: 29px, $size: 14px, $weight: 400, $color: $share-default-text-color);
+        @include typo($line: 29px, $size: 14px, $weight: 400, $color: var(--default-text-color));
         @include placeholder-input {
-          @include typo($line: 29px, $size: 14px, $weight: 300, $color: $share-default-text-placeholder); //#89929e
+          @include typo($line: 29px, $size: 14px, $weight: 300, $color: var(--default-text-placeholder)); //#89929e
         }
       }
     }
@@ -207,7 +207,7 @@
   
   &__icon {
     &.edit-icon {
-      color: $share-default-block-background; //must follow the background color
+      color: var(--default-block-background); //must follow the background color
       cursor: pointer;
       height: 18px;
       margin: 3px 5px 3px 15px;
@@ -221,8 +221,8 @@
       }
 
       &:hover {
-        background-color: $share-default-background-hover;
-        color:$share-default-icon-reverse;
+        background-color: var(--default-background-hover);
+        color:var(--default-icon-reverse);
         opacity: 1;
       }
 
@@ -238,20 +238,20 @@
     }
 
     &.expiry-time {
-      color: $share-default-icon-error;
+      color: var(--share-default-icon-error);
       cursor: help;
       height: 18px;
       margin: 4px 5px 3px 12px;
       width: 18px;
 
       & svg {
-        border: 0.8px solid $share-default-icon-reverse;
+        border: 0.8px solid var(--default-icon-reverse);
         border-radius: 50%;
       }
 
       & .tooltips {
-        @include typo($size: 12px, $line: 20px, $color: $share-default-text-tooltips);
-        background-color: $share-default-background-tooltips;
+        @include typo($size: 12px, $line: 20px, $color: var(--default-text-tooltips));
+        background-color: var(--background-tooltips);
         border-radius: $default-border-radius;
         max-height: 90px;
         min-height: 40px;
@@ -268,9 +268,9 @@
 
   &__note {
     &.validity-entry-text {
-      @include typo($line: 18px, $size: 14px, $weight: 300, $color: $share-default-text-color);//$size: 13px, $weight: 400,
+      @include typo($line: 18px, $size: 14px, $weight: 300, $color: var(--default-text-color));//$size: 13px, $weight: 400,
       align-items: center;
-      background-color: $share-default-background;  
+      background-color: var(--default-background);  
       border-radius: $default-border-radius-small;
       height: 20px;
       justify-content: center;
