--- a/src/drumee/builtins/window/sharebox/widget/suggest-contact-item/skin/index.scss
+++ b/src/drumee/builtins/window/sharebox/widget/suggest-contact-item/skin/index.scss
@@ -2,18 +2,18 @@
 .suggestion-contact-item {
   &__ui {
     background-color: inherit;
-    @include typo( $color : $share-default-text-color);//var(--egrey-2f));
+    @include typo( $color: var(--default-text-color));//var(--egrey-2f));
     cursor: pointer;
     overflow: hidden;
 
     &:hover,
     &[data-active=active],
     &[data-radio=on] {
-      background: $share-default-background-hover;
+      background: var(--default-background-hover);
       
       & .profile-icon,
       & .note-reader{
-        color: $share-default-text-hover ;//var(--white);
+        color: var(--default-text-hover);//var(--white);
       }
     }
   }
@@ -27,14 +27,14 @@
   }
 
   &__icon {
-    color: $share-default-icon-neutral; //var(--egrey-89);
+    color: var(--default-icon-neutral); //var(--egrey-89);
     height: 28px; //25px; //23px;
     width: 25px; //22px;
     margin-top: -1px; //2px;
     margin-left: 2px;
     & .note-reader{
       &:hover{
-      color:$share-default-icon-hover;
+      color:var(--default-icon-hover);
       }
     }
   }
@@ -73,7 +73,7 @@
     }
 
     &__name {
-      @include typo( $size :14px, $line: 16px, $color: $share-default-text-color);//var(--egrey-2f) );
+      @include typo( $size :14px, $line: 16px, $color: var(--default-text-color));//var(--egrey-2f) );
       padding: 3px 3px 3px 15px;
       margin-top: 3px;
       overflow:hidden;
@@ -90,15 +90,15 @@
     height: 33px;
 
     &__icon{
-      color: $share-default-icon-neutral; //var(--egrey-89);
+      color: var(--default-icon-neutral); //var(--egrey-89);
       height: 28px;
       width: 25px;
       &:hover{
-        color:$share-default-icon-reverse;
+        color:var(--default-icon-reverse);
       }
     }
     &__profile {
-      color: $share-default-user-icon;
+      color: var(--default-user-icon);
       height: 29px;
       width: 29px;
     }
