--- a/src/drumee/builtins/window/website/skin/header.scss
+++ b/src/drumee/builtins/window/website/skin/header.scss
@@ -12,7 +12,7 @@
 
       &::after {
         align-content: center;
-        background-color: $website-background-header;
+        background-color: var(--website-header-bg);
         border-radius: $default-border-radius-top;
         content: attr(data-name);
         display: flex;
@@ -31,11 +31,11 @@
         white-space: nowrap;
         width: 190px;
         box-shadow: var(--shadow-main); 
-        @include typo($size: 12px, $line: 14px, $weight: 400, $color: $share-default-text-reverse);
+        @include typo($size: 12px, $line: 14px, $weight: 400, $color: var(--default-text-reverse));
       }
 
       &:before {
-        border: 7px solid $website-border-frame; 
+        border: 7px solid var(--website-main); 
         content: " ";
         height: calc(100% + 6px);
         left: -3px;
@@ -52,7 +52,7 @@
 
   &__header {
     border-bottom: none;
-    background-color: $website-background-header;
+    background-color: var(--website-header-bg);
     border-radius: 6px 6px 0 0;
 
     &[data-content="folder"] {
